add support for bypassing cache to fetch fresh data from nais
