# src/main/kotlin/no/nav/tpt/infrastructure/nais/NaisApiService.kt
@@ -1,7 +1,7 @@
 package no.nav.tpt.infrastructure.nais
 
 interface NaisApiService {
-    suspend fun getApplicationsForUser(email: String): UserApplicationsData
-    suspend fun getVulnerabilitiesForUser(email: String): UserVulnerabilitiesData
+    suspend fun getApplicationsForUser(email: String, bypassCache: Boolean = false): UserApplicationsData
+    suspend fun getVulnerabilitiesForUser(email: String, bypassCache: Boolean = false): UserVulnerabilitiesData
 }
 
