# src/main/kotlin/no/nav/tpt/infrastructure/vulns/VulnService.kt
@@ -3,5 +3,6 @@ package no.nav.tpt.infrastructure.vulns
 import no.nav.tpt.domain.VulnResponse
 
 interface VulnService {
-    suspend fun fetchVulnerabilitiesForUser(email: String): VulnResponse
+    suspend fun fetchVulnerabilitiesForUser(email: String, bypassCache: Boolean = false): VulnResponse
 }
+
